2004-04-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit-debug.[ch]
	* gedit2.c: debugging output is now enabled by setting env vars.

2004-03-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c (gedit_document_replace_selected_text): fix leak
	on error.

2004-03-26  Paolo Maggi  <paolo.maggi@polito.it>

	* dialogs/gedit-dialog-replace.c
	(replace_dlg_replace_button_pressed): cosmetic changes

	* gedit-document.c (gedit_document_find): fixed bug #138051 (Reproducible 
	search/replace dialog application lockup).

2004-03-13  Rob Adams  <readams@readams.net>

	* dialogs/gedit-preferences.glade2: Change type hint to
	GDK_WINDOW_TYPE_HINT_DIALOG.  Fix for #136920.

2004-03-05  Paolo Maggi  <paolo.maggi@polito.it>

	Fixes bug #104950 (Right-click unselects text if you click 
	outside the selection)

	* gedit-view.c (button_press_event): removed
	(gedit_view_init): does not connect the "button-press-event" signal

2004-03-05  Albert Chin-A-Young  <china@thewrittenword.com>

	* dialogs/gnome-print-font-picker.c: IBM C compiler wants
        bit types to be signed or unsigned integers

	* Makefile.am: Link order matters on IRIX

	* gedit-debug.h: Don't override __FUNCTION__ if the
        compiler supports it

2004-03-05  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-document.c (gedit_document_get_uri): use gnome_vfs_format_uri_for_display
	instead of eel_vfs_format_uri_for_display

	* gedit-file-selector-util.c (create_gtk_selector): uses
	gtk_file_chooser_set_current_folder_uri istead of gtk_file_chooser_set_current_folder
	because now the default_path must be an URI. Fixes bug #135987

	* gedit-file.c (get_dirname_from_uri): returns an URI
	(gedit_file_open): uses gedit_default_path when default_path is NULL

2004-03-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c: restore Higlight Mode menu to the proper sensitivity.
	* gedit-gedit-prefs-manager-app.c: update the sensitivity of the
	Higlight Mode menu.
