@@ -35,8 +35,9 @@
 #include <bonobo/bonobo-window.h>
 #include <bonobo/bonobo-ui-component.h>
 
-
 #include <gedit/bonobo-mdi-child.h>
+
+G_BEGIN_DECLS
 
 #define BONOBO_TYPE_MDI            (bonobo_mdi_get_type ())
 #define BONOBO_MDI(obj)            (GTK_CHECK_CAST ((obj), BONOBO_TYPE_MDI, BonoboMDI))
@@ -218,6 +219,6 @@ GtkWidget *bonobo_mdi_get_bottom_pane_for_window (BonoboWindow *win);
 gboolean	bonobo_mdi_move_view_to_new_window (BonoboMDI *mdi, GtkWidget *view);
 gint		bonobo_mdi_n_children_for_window (BonoboWindow *win);
 
+G_END_DECLS
+
 #endif /* _BONOBO_MDI_H_ */
-
-
