@@ -1,6 +1,11 @@
 2004-04-04  Paolo Borelli  <pborelli@katamail.com>
 
-	* gedit-debug.[ch]
+	* bonobo-mdi.h: add missing G_END_DECLS, noticed by Yotam Medini.
+	* bonobo-mdi-child.h: ditto.
+
+2004-04-04  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-debug.[ch]:
 	* gedit2.c: debugging output is now enabled by setting env vars.
 
 2004-03-27  Paolo Borelli  <pborelli@katamail.com>
